--- a/volumes/emptyDir.yml
+++ b/volumes/emptyDir.yml
@@ -9,7 +9,7 @@ spec:
     - name: nginx-alpine-volume
       image: nginx:alpine
       volumeMounts:
-        - name: html
+        - name: html2
           mountPath: /usr/share/nginx/html
           readOnly: true
       resources:
@@ -22,7 +22,8 @@ spec:
       image: alpine
       command: ["/bin/sh", "-c"]
       args:
-        - while true; do date >> /html/index.html;sleep 3; done
+        # - while true; do date >> /html/index.html;sleep 3; done
+        - while true; do cat /html/index.html; sleep 10s; done
       resources:
         limits:
           memory: "128Mi"
@@ -30,6 +31,7 @@ spec:
       volumeMounts:
         - name: html2
           mountPath: /html
+          readOnly: true
   volumes:
-    - name: html
+    - name: html2
       emptyDir: {}
