--- a/volumes/emptyDir.yml
+++ b/volumes/emptyDir.yml
@@ -1,27 +1,28 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-alpine-volume
+  name: nginx-vol
   labels:
-    name: nginx-alpine-volume
+    name: nginx-vol
 spec:
   containers:
-    - name: nginx-alpine-volume
+    - name: nginx-vol
       image: nginx:alpine
       volumeMounts:
         - name: html
           mountPath: /usr/share/nginx/html
+          readOnly: true
       resources:
         limits:
           memory: "128Mi"
           cpu: "500m"
       ports:
         - containerPort: 80
-    - name: html-updater
+    - name: html-checker
       image: alpine
       # Command is the an entrypoint in docker where in you can't override the executable that you wrote here
       command: ["/bin/sh", "-c"]
-      # Args is the equivalent of CMD in docker where in you can override the the values 
+      # Args is the equivalent of CMD in docker where in you can override the the values
       # if you execute it using CLI
       args:
         - while true; do cat /html/index.html; sleep 10s; done
@@ -33,6 +34,21 @@ spec:
         - name: html
           mountPath: /html
           readOnly: true
+    - name: html-creator
+      image: alpine
+      # Command is the an entrypoint in docker where in you can't override the executable that you wrote here
+      command: ["/bin/sh", "-c"]
+      # Args is the equivalent of CMD in docker where in you can override the the values
+      # if you execute it using CLI
+      args:
+        - while true; do date >> /html/index.html; sleep 3s; done
+      resources:
+        limits:
+          memory: "128Mi"
+          cpu: "500m"
+      volumeMounts:
+        - name: html
+          mountPath: /html
   volumes:
     - name: html
       emptyDir: {} # shared storage for containers inside this pod...
