--- a/service/cluster-ip.yaml
+++ b/service/cluster-ip.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: pod-server1-deployment
+    app: pod-server1
   ports:
-    - port: 80
+    - port: 8080
       targetPort: 80
