--- a/configMaps/Dockerfile
+++ b/configMaps/Dockerfile
@@ -2,4 +2,5 @@ FROM node:alpine
 LABEL author="Vince Llauderes"
 WORKDIR /home/www/app
 COPY server.js .
-CMD [ "node", "server.js" ]
+ENTRYPOINT [ "node" ]
+CMD [ "server.js" ]
